force-app/main/default/objects/Batch_Jobs_Execution__c/Batch_Jobs_Execution__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting would be used to store time against each batch job based on that batch job process will take records for processing.</description>
    <label>Batch Jobs Execution</label>
</CustomObject>