force-app/main/default/objects/Batch_Jobs_Execution__c/fields/Batch_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Name__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Name of the batch</description>
    <label>Batch Job Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>