force-app/main/default/objects/Batch_Jobs_Execution__c/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>size of the batch job to run</description>
    <label>Batch size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>