force-app/main/default/objects/Batch_Jobs_Execution__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Email body in the notification to send after batch execution</description>
    <label>Email Body</label>
    <type>TextArea</type>
</CustomField>