force-app/main/default/objects/Batch_Jobs_Execution__c/fields/Process_last_days__c.field-meta.xml
<CustomField>
    <fullName>Process_last_days__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>batch last processed</description>
    <label>Process last days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>