force-app/main/default/objects/Batch_Jobs_Execution__c/fields/Process_last_hours__c.field-meta.xml
<CustomField>
    <fullName>Process_last_hours__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>batch last processed hours</description>
    <label>Process last hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>