force-app/main/default/objects/Batch_Jobs_Execution__c/fields/Recipient_email_address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_email_address__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Email address to notify</description>
    <label>Recipient email address</label>
    <type>Email</type>
</CustomField>